# capstone-optimal-bidding

./: Henry_Hub_Natural_Gas_Spot_Price.csv  Henry_Hub_Natural_Gas_Spot_Price_Daily.csv  README.md  active_generators.csv  active_generators_2025_ercot.csv  cumulative_reward_n_agent_ablation.csv  data_pipeline.py  discretizer.py  elasticity_perturbation.csv  ercot_hubavg_price.csv  ercot_price.csv  fuel_mix_2025_2026.csv  fuel_mix_2025_2026_ercot.csv  hourly_load.py  lmp-hourly-FORMOSA_CC2-ERCOT-SPP.csv  load_cache.csv  merge_market_data.py  outputs.py  policy_freeze_ablation.csv  pyproject.toml  requirements.txt  test.txt  test_supply_stack.py  warm_start_ablation.csv
Analysis/empirical_game/: best_reply_edges.csv  best_response_gaps.csv  deviation_table.csv  graph_reachable_sinks.csv  graph_sccs.csv  graph_summary.csv  local_robustness.csv  payoff_table.csv  plot_empirical_game_results.py  sink_quality.csv
Preprocessing/: preprocessing.py
empirical_game/: __init__.py  best_response.py  graph_analysis.py  library_builder.py  payoff_estimator.py  policy_wrappers.py  profile_space.py  reports.py  run_empirical_weak_acyclicity_test.py
shell/: action_space.py  agent_interface.py  cmd.txt  enverus_api.py  environment_metrics.py  learning_metrics_plots.py  linear_approximator.py  load_sarimax_projections.py  main.py  market_loads_api.py  market_model.py  model.py  multi_agent_metrics.py  poc_controlled_opponents.py  rl_metrics_tabular.py  state.py  state_space.py  tabular_q_agent.py  test.py  train_with_metrics.py
shell/ablations/: demand_perturbation.py  run_all.py  (+3 more)
(+55 files in other folders)
